# dynamical_modelling

./: .gitignore  readme.md
02_2D_PDE_solver/: plotter.jl
02_2D_PDE_solver/include/: solver.hpp
03_math_oscillator/include/: solver.hpp
03_math_oscillator/src/: solver.cpp
04_polar_PDE/: CMakeLists.txt
04_polar_PDE/include/: polar.hpp
04_polar_PDE/src/: main.cpp  polar.cpp  text.txt
05_biffurcation/src/: main.cpp
06_vdPole_oscillator/: plotter.jl  text.txt
06_vdPole_oscillator/src/: main.cpp
08_periodic_rotator/: rotate.jl
09_Henon_map/: ex09.jl  main.jl  tasks.jl
10_multifractal/: main.jl
ex1_prep/: differentiate.cpp  differentiate.hpp  harmonic  log  log_map.txt  log_map_r.txt  logistic_map.cpp  main  main.cpp  oscillator.cpp  oscillator.hpp  plotter.jl  solution.csv  test  test.cpp  vec_field.csv  vector_field.csv
lab01/: CMakeLists.txt  main_labs.cpp  plotter.jl
lab01/include/: solver.hpp
lab01/src/: solver.cpp  text.txt
lab02/: plotter.jl
lab02/include/: solver.hpp
lab02/src/: main.cpp  solver.cpp
lab03/: plotter.jl  test.txt
lab03/include/: solver.hpp
lab03/src/: main.cpp  solver.cpp
lab04/: plotter.jl
lab04/include/: solver.hpp
lab04/src/: solver.cpp
lab05/: plotter.jl
lab05/include/: bifurcation.hpp
lab05/src/: bifurcation.cpp
lab06/: CMakeLists.txt  plotter.jl
lab06/include/: hopf.hpp
lab06/src/: hopf.cpp  main.cpp
lab07/: log_map.jl.txt
lab08/: rotate.jl
lab08/data/: K_0.500000_b_0.000000_poincare.csv  K_0.500000_b_0.001000_poincare.csv  K_0.500000_b_0.010000_poincare.csv  K_0.971635_b_0.000000_poincare.csv  K_0.971635_b_0.001000_poincare.csv  K_0.971635_b_0.010000_poincare.csv  K_5.000000_b_0.000000_poincare.csv  K_5.000000_b_0.001000_poincare.csv  K_5.000000_b_0.010000_poincare.csv
lab08/out_kicked/: K_0.500000_b_0.000000_poincare.csv  K_0.500000_b_0.001000_poincare.csv  K_0.500000_b_0.010000_poincare.csv  K_0.971635_b_0.000000_poincare.csv  K_0.971635_b_0.001000_poincare.csv  K_0.971635_b_0.010000_poincare.csv  K_5.000000_b_0.000000_poincare.csv  K_5.000000_b_0.001000_poincare.csv  K_5.000000_b_0.010000_poincare.csv
projekt/: plotter.jl  text.txt
projekt/include/: duffing.hpp
projekt/src/: duffing.cpp  main.cpp
projekt_Duffing/: CMakeLists.txt  main.jl  plotter.jl  readme.md
projekt_Duffing/include/: duffing.hpp  quantum_duffing.hpp  user_execute.hpp  wigner.hpp
projekt_Duffing/moyal_solver/: CMakeLists.txt  README.md  build.sh  main.jl  wigner_animation.jl
projekt_Duffing/moyal_solver/examples/: basic_example.cpp  main.cpp
projekt_Duffing/moyal_solver/include/: moyal_setup.hpp  moyal_solver.hpp  phase_space.hpp  potentials.hpp  propagators.hpp  wigner_df.hpp
projekt_Duffing/moyal_solver/src/: moyal_solver.cpp  phase_space.cpp  propagators.cpp  wigner_df.cpp
projekt_Duffing/src/: duffing.cpp  main.cpp  quantum_duffing.cpp  user_execute.cpp  wigner.cpp
